---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2023-11-4
  Features:
    - Added nexelit-titanium-kevlar-aramid-tritium-unobtanium superpolymer nanowoven biocomposite smart self-healing quantum N-dimensional hyperfabric
    - Blowing up chests will now spill their items on the ground
    - I am completely and mentally stable
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2023-10-12
  Features:
    - Fixed no way to void residual gas in pyblock
    - Changed mod icon (again)
    - Reduced void amount for gas vent from 100->50. speed doubled to compensate (2x as many filters needed)
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2023-9-17
  Features:
    - Added dependency on undeletable fluids
    - Decreased copper mining water usage 20 -> 10
    - Changed slacked lime voiding recipe
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2023-9-16
  Features:
    - Better mod thumbnail
    - Made it easier to void muddy sludge if pyblock is installed
    - Increased ash consumption in planter box recipe 3 -> 9
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2023-9-15
  Features:
    - Removed grindy stone mining in the early game
    - "Fixed" the pipe connections for the burner mining drill
    - Added a new use for tar
    - Sped up the coal gas voiding recipe 5x
    - Added a new use for oxygen
    - Fixed some issues with Py touched by an angel
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2023-9-15
  Features:
    - Fixed weird fluidboxes for neutron absorbers
    - Fixed forced_value for AAI loaders setting was not applied properly