@@ -1,6 +1,6 @@
 {
   "name": "pyhardmode",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "factorio_version": "1.1",
   "title": "Pyanodons Hard Mode",
   "author": "notnotmelon",
